--- a/src/templates/vacancies.html
+++ b/src/templates/vacancies.html
@@ -15,8 +15,8 @@
                     <th>From</th>
                     <th>To</th>
                     <th>Created at</th>
-                    <th>Count Responses</th>
-                    <th>Count Total Responses</th>
+                    <th>Ответили</th>
+                    <th>Откликнулось</th>
                     <th>Link</th>
                     <th>Employer</th>
                 </tr>
