--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+    <p>Россия</p>
     <ul>
         <li>
             <a href="/vacancies/php/day">Вакансии php за сутки</a>
