--- a/src/templates/vacancies.html
+++ b/src/templates/vacancies.html
@@ -12,13 +12,13 @@
                 Выбрано: {{ countSelectedVacancies }}
                 <button @click="onReset">Сбросить</button> |
                 <a :href="hhOauthUri" target="_blank">Логин в hh</a> |
-                <a href="/" @click="onUserProfile($event)">User Profile</a> |
-                <a href="/" @click="onTakeAccessToken($event)">Take Access Token</a>
+                <a href="/" @click="onUserProfile($event)">User Profile</a>
             </div>
             <div v-if="userProfileVisible">
                 <div>
                     <span>user login code</span>
-                    <input type="text" v-model="userHhLoginCode"/>
+                    <input type="text" v-model="userHhLoginCode"/> | 
+                    <a href="/" @click="onTakeAccessToken($event)">Take Access Token</a>
                 </div>
                 <div>
                     <span>access token</span>
@@ -27,6 +27,10 @@
                 <div>
                     <span>refresh token</span>
                     <input type="text" v-model="userHhRefreshToken"/>
+                </div>
+                <div>
+                    <span>resume id</span>
+                    <input type="text" v-model="userHhResumeId"/>
                 </div>
                 <div>
                     <span>сопроводительное письмо</span>
@@ -117,6 +121,7 @@
       userHhLoginCode: '',
       userHhAccessToken: '',
       userHhRefreshToken: '',
+      userHhResumeId: '',
     }
   },
   computed: {
@@ -211,6 +216,9 @@
     },
     onTakeAccessToken(event) {
         event.preventDefault()
+        if (this.userHhLoginCode.length < 3) {
+            return
+        }
         fetch(
             "/api/take-token", {
                 method: 'POST',
