--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,5 +10,36 @@
             <a href="/vacancies/php/month">Вакансии php за месяц</a>
         </li>
     </ul>
+    <div>
+        <p><b>Авторизация</b></p>
+        <p>
+            Заходим в "User Profile". Жмём "Логин в hh". Даём разрешение приложению, жмём "Продолжить" или логинимся в hh.
+            Дальше нас перебрасывает на другую страницу. Копируем из адреса код.
+        </p>
+        <p>Пример адреса</p>
+        <p>
+            https://sort-app.ru/?code=GL2HDF4SVO5S6ERM1T10P44OMIG8255T4GG0VGO16O2PT5D097B7G74EQC5PH1U1&state=5t8wr34543fsd
+        </p>
+        <p>
+            Отсюда берём code. Здесь это GL2HDF4SVO5S6ERM1T10P44OMIG8255T4GG0VGO16O2PT5D097B7G74EQC5PH1U1
+        </p>
+        <p>Вставляем этот код в поле "user login code"</p>
+        <p>Дальше жмём "Take Access Token". Здесь должен подтянуться "access token".</p>
+        <p>Идём в своё резюме на hh и копируем его id из адреса.</p>
+        <p>Пример адреса</p>
+        <p>
+            https://voronezh.hh.ru/resume/2f1b497dff0592d5490039ed1f7333356a3941
+        </p>
+        <p>
+            Отсюда берём 2f1b497dff0592d5490039ed1f7333356a3941
+        </p>
+        <p>Дальше самостоятельно либо при помощи ИИ пишем сопроводительное письмо и добавляем его в поле "сопроводительное письмо"</p>
+        <p>Эти все данные хранятся у вас в куках и локал сторадже, так что при перезагрузке страницы они будут заполнены. На сервере нигде ничего не хранится пока что.</p>
+
+        <p><b>Как пользоваться</b></p>
+        <p>Фильтруем, выбираем понравившиеся позиции, жмём "Откликнуться".
+            Смотрим на количество уже откликнувшихся на конкретные позиции, на позиции с более 500 уже полученных откликов, шансов мало )
+        </p>
+    </div>
 </body>
 </html>
